in sidebar, fixed logo visibility, changed heading gradient, changed menu button positioning

--- a/frontend/src/app/components/sidebar/sidebar.component.css
+++ b/frontend/src/app/components/sidebar/sidebar.component.css
@@ -17,7 +17,7 @@ body {
   flex-direction: column;
   background-color: #2b2b2b;
   padding: 24px;
-  border-radius: 30px;
+  border-radius: 0px 30px 30px 0px;
   transition: width 0.7s ease;
   margin: 0;
 }
@@ -25,7 +25,7 @@ body {
 .sidebar .head {
   display: flex;
   gap: 20px;
-  padding-bottom: 10px;
+  padding-bottom: 15px;
   border-bottom: 1px solid #3a3a3a;
 }
 
@@ -34,6 +34,7 @@ body {
   height: 60px;
   border-radius: 50%;
   overflow: hidden;
+  flex-shrink: 0;
 }
 
 .logo img {
@@ -41,17 +42,26 @@ body {
   object-fit: cover;
 }
 
+.heading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  white-space: nowrap;
+}
+
 .heading p {
   color: transparent;
-  font-size: 24px;
+  padding-top: 5px;
+  font-size: 28px;
   font-weight: 700;
-  background-image: linear-gradient(45deg, #ff00ff 10%, #00ffff 50%, #66ff66 90%);
+  background-image: linear-gradient(45deg, #87CEEB 10%, #A9D3EE 40%, #D1A8C8 70%, #F4C2C2 90%);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   opacity: 1;
   transition: opacity 0.7s ease, visibility 0.7s ease;
 }
+
 
 .menu ul, .logout ul {
   padding: 0;
@@ -77,7 +87,7 @@ body {
 }
 
 .menu ul li:hover a,
-.menu ul li.active a{
+.menu ul li.active a {
   color: #fff;
   background-color: #3a3a3a;
 }
@@ -103,28 +113,28 @@ body {
 
 .menu-btn {
   position: absolute;
-  right: -12px;
-  top: 3.5%;
+  right: -24px;
+  top: 45%;
   width: 28px;
-  height: 28px;
-  border-radius: 8px;
+  height: 56px;
+  border-radius: 0px 8px 8px 0px;
   display: flex;
   align-items: center;
   justify-content: center;
   cursor: pointer;
-  color: #2b2b2b;
-  border: 2px solid #3a3a3a;
-  background-color: #1c1c1c;
-}
-
-.menu-btn:hover {
-  color: #fff;
-  background-color: #3a3a3a;
+  color: white;
+  background-color: #2b2b2b;
+  transition: all 0.3s ease;
 }
 
 .menu-btn i {
-  transition: all 0.3s smooth;
+  transition: all 0.3s ease;
 }
+
+.menu-btn:hover i {
+  transform: scale(1.2);
+}
+
 
 .sidebar.active {
   width: 102px;
@@ -157,7 +167,7 @@ body {
 .sidebar:not(.active) .heading p {
   opacity: 1;
   visibility: visible;
-  transition: opacity 0.7s ease-in, visibility 0.7s ease-in;
+  transition: opacity 1.6s ease-in, visibility 1.6s ease-in;
 }
 
 .logout ul li a {
@@ -173,4 +183,3 @@ body {
   background-image: radial-gradient(circle, #ff6666 0%, #ff4d4d 70%, #ff3333 100%);
   transition: all 0.3s;
 }
-
